--- a/BlazorMovies/Server/Properties/launchSettings.json
+++ b/BlazorMovies/Server/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:55060/",
-      "sslPort": 0
+      "sslPort": 44390
     }
   },
   "profiles": {
@@ -13,7 +13,8 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "nativeDebugging": true
     },
     "BlazorMovies.Server": {
       "commandName": "Project",
